<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">快讯</string>
    <string name="more_than_one_account_error">账户已存在</string>
    <string name="login_success">登录成功</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="num_point">.</string>
    <string name="rmb_icon">￥</string>
    <string name="rmb_num">￥%s</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="button_login">进入</string>
    <string name="button_sure">确定</string>
    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_follow">美女</string>
    <string name="tab_mine">我</string>
    <string name="forgot_password">忘记密码</string>
    <string name="next">下一步</string>
    <string name="CONNECT_PRINT">是否要连接打印机</string>
    <string name="OK">ok</string>
    <string name="Cancel">Cancel</string>
    <string name="send_code">发送验证码</string>
    <string name="button_get_verification_code">获取验证码</string>
    <string name="content_agreement"><u><i>《用户协议》</i></u></string>
    <string name="content_read_agree">我已阅读并同意</string>
    <string name="login">登录</string>
    <string name="please_input_account">请输入帐号</string>
    <string name="next_step">下一步</string>
    <string name="login_tel_hint">请输入电话号码</string>
    <string name="login_verification_hint">请输入验证码</string>
    <string name="login_other">其他登录方式</string>
    <string name="login_skip">跳过</string>
    <string name="account_login">帐号登录</string>
    <string name="input_tel_please">请输入手机号</string>
    <string name="input_verification_please">请输入验证码</string>
    <string name="tel_login">手机号验证码登录</string>
    <string name="input_tel_or_account">输入帐号/手机号</string>
    <string name="input_pwd">输入密码</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="obtain_again">重新获取</string>
    <string name="please_not_input_the_same_password">请不要输入初始密码</string>
    <string name="no_devices">没有匹配的设备</string>
    <string name="network_catch">当前网络不可用，请检查网络是否连接</string>
    <string name="re_send">重新发送</string>
    <string name="second">秒</string>
    <string name="collect">收藏</string>
    <string name="comment">动态</string>
    <string name="setting">设置</string>

    <string name="demo_tab_1">推荐</string>
    <string name="demo_tab_2">精选</string>
    <string name="demo_tab_3">娱乐</string>
    <string name="demo_tab_4">体育</string>
    <string name="demo_tab_5">电影</string>
    <string name="demo_tab_6">汽车</string>
    <string name="demo_tab_7">时尚</string>
    <string name="demo_tab_8">Jelly Bean</string>
    <string name="demo_tab_9">KitKat</string>
    <string name="demo_tab_10">Lollipop</string>
    <string name="photo_details">图片详情</string>
    <string name="photo">图片</string>
    <string name="vitamio_demo_name">VitamioDemo</string>
    <string name="local_video">Play Video from Local File</string>
    <string name="local_video_setsurface">Play Video use setSurface</string>
    <string name="stream_video">Play Streaming Video</string>
    <string name="local_audio">Play Audio from Local File</string>
    <string name="res_audio">Play Audio from Resources</string>
    <string name="title_activity_video_subtitle_demo">VideoSubtitleDemo</string>
    <string name="action_settings">Settings</string>
    <string name="subtitle1">MediaPlayer  Subtitles</string>
    <string name="subtitle12">VideoView Subtitles</string>
    <string name="title_activity_media_player_subtitle">MediaPlayerSubtitle</string>
    <string name="title_activity_video_view_subtitle">VideoViewSubtitle</string>
    <string name="title_activity_video_subtitle_list">VideoSubtitleList</string>
    <string name="title_activity_video_buffer">VideoViewBuffer</string>
    <string name="openvideo1">Open Video1</string>
    <string name="openvideo2">Open Video2</string>
    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>
    <string name="care_about_wechat">快讯介绍:基于Rxjava+Retrofit的框架,高仿头条新闻.\n本项目纯属技术练习,如涉及版权问题,请及时联系我.\n项目地址:https://github.com/moruoyiming/NewsBulletin\nEmail:moruoyiming123@gmail.com\nQQ:798774875\nName:Brigitte</string>
    <string name="share">分享</string>
    <string name="share_contents">来自「Moruoyiming」的分享：%1$s %2$s</string>
    <string name="reload">重新尝试</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="empty">还没有数据哦</string>
    <string name="no_net">网络不可用,请检查你的网络</string>

    <string name="news">新闻</string>
    <string name="web_view">WebView</string>
    <string name="browser">用浏览器打开</string>
    <string name="news_from">%1$s %2$s</string>
</resources>
